# PathKeep

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  DESIGN.md  DEVELOPMENT.md  README.CN.md  README.md  RELEASE.md  SUPPORT.md  TESTING.md  TEST_PLAN.md  TROUBLESHOOTING.md  clippy.toml  components.json  deny.toml  eslint.config.js  index.html  llm.txt  package-lock.json  package.json  playwright.config.ts  playwright.desktop-bridge.config.ts  rust-toolchain.toml  stryker.config.json  stryker.desktop-contract.config.json  stryker.shell.config.json  tsconfig.app.json  tsconfig.eslint.json  tsconfig.node.json  tsconfig.test.json  vcpkg-configuration.json  vcpkg.json  vercel.json  vite.config.ts  vitest.config.ts  vitest.desktop-contract.config.ts  vitest.quality.config.ts  vitest.shell.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: mutants.toml
src-tauri/capabilities/: default.json
src-tauri/crates/browser-history-fixtures/: Cargo.toml
src-tauri/crates/browser-history-fixtures/src/: lib.rs  time.rs
src-tauri/crates/browser-history-fixtures/src/chromium/: mod.rs
src-tauri/crates/browser-history-fixtures/src/firefox/: mod.rs
src-tauri/crates/browser-history-fixtures/src/safari/: mod.rs
src-tauri/crates/browser-history-fixtures/src/takeout/: mod.rs
src-tauri/crates/browser-history-fixtures/tests/: chromium_roundtrip.rs  firefox_roundtrip.rs  safari_roundtrip.rs  takeout_roundtrip.rs
src-tauri/crates/browser-history-parser/: Cargo.toml
src-tauri/crates/browser-history-parser/examples/: source-diff.rs  source-report.rs
src-tauri/crates/browser-history-parser/src/: error.rs  lib.rs  observation.rs  types.rs
src-tauri/crates/browser-history-parser/src/chromium/: mod.rs
src-tauri/crates/browser-history-parser/src/firefox/: mod.rs
src-tauri/crates/browser-history-parser/src/safari/: mod.rs
src-tauri/crates/browser-history-parser/src/takeout/: browser_history.rs  json_stream.rs  mod.rs  payloads.rs  source.rs  tests.rs
src-tauri/crates/vault-core/: Cargo.toml
src-tauri/crates/vault-core/examples/: field-promotion-dry-run.rs  intelligence-benchmark.rs
src-tauri/crates/vault-core/src/: agent_store.rs  ai.rs  ai_queue.rs  ai_sidecar.rs  annotations.rs  app_lock.rs  archive.rs  browser_access.rs  browser_retention.rs  chrome.rs  config.rs  deterministic.rs  diagnostics.rs  durable_io.rs  enrichment.rs  enrichment_site_adapters.rs  fault_inject.rs  git_audit.rs  insights.rs  intelligence_blobs.rs  intelligence_catalog.rs  intelligence_runtime.rs  intelligence_sections.rs  lib.rs  migration.rs  models.rs  remote.rs  stars.rs  takeout.rs  utils.rs
src-tauri/crates/vault-core/src/ai/: agent_harness.rs  agent_tools.rs  chat_stream.rs  code_mode.rs  control.rs  dedup.rs  embedding_candle.rs  embedding_external.rs  embedding_static.rs  fingerprint.rs  indexing.rs  ledger.rs  llm.rs  narrative.rs  provider.rs  read_model.rs  reverse_visit_map.rs  search.rs  tests.rs  traits.rs  vector_index.rs  vector_planes.rs  vector_store.rs  visit_content_map.rs  working_set.rs
src-tauri/crates/vault-core/src/ai_queue/: tests.rs
src-tauri/crates/vault-core/src/archive/: artifacts.rs  at_rest.rs  backup.rs  doctor.rs  history.rs  intelligence_projection.rs  maintenance.rs  mod.rs  read_models.rs  run_support.rs  schema.rs  search_lexical.rs  search_opencc.rs  search_projection.rs  search_query.rs  source_evidence.rs  source_evidence_builder.rs  tests.rs  upgrade_v020_tests.rs  write_lock.rs
src-tauri/crates/vault-core/src/chrome/: discovery.rs  paths.rs  staging.rs  tests.rs
src-tauri/crates/vault-core/src/deterministic/: classification.rs  mod.rs  rules.rs  tests.rs  text.rs  types.rs  url.rs
src-tauri/crates/vault-core/src/enrichment/: content_fetch.rs  content_fetch_api.rs  extractors.rs  rate_limit.rs
src-tauri/crates/vault-core/src/insights/: grouping.rs  m5b.rs  runtime.rs  shared.rs  site_adapters.rs  storage.rs  surfaces.rs  tests.rs  topics.rs
src-tauri/crates/vault-core/src/intelligence/: day_insights.rs  host_artifacts.rs  incremental.rs  intelligence_core_persist.rs  intelligence_daily_rollup_state.rs  intelligence_daily_rollups.rs  intelligence_domain.rs  intelligence_explain.rs  intelligence_explain_helpers.rs  intelligence_navigation.rs  intelligence_outputs.rs  intelligence_overview.rs  intelligence_overview_snapshot.rs  intelligence_rebuild.rs  intelligence_refind.rs  intelligence_schema.rs  (+18 more)
src-tauri/crates/vault-core/tests/: candle_embedding_e2e.rs  lmstudio_agent_e2e.rs  lmstudio_chat_stream_e2e.rs  lmstudio_embedding_e2e.rs  s2_vector_index_bench.rs  static_embedding_e2e.rs
src-tauri/crates/vault-metal-backend/: Cargo.toml
src-tauri/crates/vault-metal-backend/src/: lib.rs
src-tauri/crates/vault-platform/: Cargo.toml
src-tauri/crates/vault-platform/src/: biometric.rs  discovery.rs  full_disk_access.rs  host_capability.rs  keyring.rs  launcher.rs  lib.rs  scheduler.rs  test_support.rs
src-tauri/crates/vault-platform/tests/: native_host.rs
src-tauri/crates/vault-worker/: Cargo.toml
src-tauri/crates/vault-worker/src/: annotations.rs  app.rs  archive_flows.rs  cli.rs  context.rs  intelligence.rs  job_runtime.rs  lib.rs  mcp.rs  migration.rs  schedule.rs  security.rs  stars.rs  tests.rs
src-tauri/icons/: icon.icns
src-tauri/src/: dev_ipc_bridge.rs  file_manager.rs  lib.rs  main.rs  session.rs  test_support.rs  updater.rs  worker_bridge.rs
src-tauri/src/commands/: ai_chat.rs  annotations.rs  app.rs  archive.rs  blocking.rs  import.rs  intelligence.rs  migration.rs  mod.rs  remote.rs  schedule.rs  security.rs  stars.rs  support.rs  update.rs
src-tauri/src/commands/intelligence/: ai.rs  core.rs  runtime.rs
src-tauri/src/dev_ipc_bridge/: config.rs  dispatch.rs  payloads.rs  router.rs
src-tauri/src/dev_ipc_bridge/dispatch/: tests.rs
src-tauri/src/worker_bridge/: annotations.rs  app.rs  archive.rs  import.rs  intelligence.rs  migration.rs  mod.rs  remote.rs  schedule.rs  security.rs  stars.rs
src-tauri/src/worker_bridge/intelligence/: ai.rs  core.rs  runtime.rs
(+1377 files in other folders)
