[package]
name = "pathkeep-desktop"
version = "0.1.0"
edition = "2024"
description = "Audit-first desktop archive for browser history"
license = "GPL-3.0-only"

[features]
default = []
devtools-bridge = ["dep:axum", "dep:tower-http"]

[lib]
name = "pathkeep_desktop"
path = "src/lib.rs"

[workspace]
members = [
  "crates/vault-core",
  "crates/vault-platform",
  "crates/vault-worker",
  "crates/browser-history-parser",
]
resolver = "2"

[workspace.package]
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.100"
arrow-array = "57.2"
arrow-schema = "57.2"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
futures = "0.3.31"
getrandom = "0.3.4"
hex = "0.4.3"
keyring-core = "0.7.2"
lancedb = "0.27.2"
libc = "0.2.177"
plist = "1.8.0"
regex = "1.12.2"
rig-core = "0.34.0"
rmcp = { version = "1.3.0", features = ["transport-io"] }
rusqlite = { version = "0.39.0", features = ["backup", "bundled-sqlcipher-vendored-openssl", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
walkdir = "2.5.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.6", optional = true }
chrono.workspace = true
log = "0.4.28"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.8.5", features = [] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.4.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio.workspace = true
tower-http = { version = "0.6.6", optional = true, features = ["cors"] }
url = "2.5.7"
vault-core = { version = "0.1.0", path = "crates/vault-core" }
vault-platform = { version = "0.1.0", path = "crates/vault-platform" }
vault-worker = { version = "0.1.0", path = "crates/vault-worker" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
