[package]
name = "pathkeep-desktop"
version = "0.2.0"
edition = "2024"
description = "Audit-first desktop archive for browser history"
license = "GPL-3.0-only"

[features]
default = []
devtools-bridge = ["dep:axum", "dep:tower-http"]

[lib]
name = "pathkeep_desktop"
path = "src/lib.rs"

[workspace]
members = [
  "crates/vault-core",
  "crates/vault-platform",
  "crates/vault-worker",
  "crates/browser-history-parser",
  "crates/browser-history-fixtures",
]
resolver = "2"

[workspace.package]
license = "GPL-3.0-only"

[workspace.dependencies]
anyhow = "1.0.100"
# candle = the in-app embedding inference engine (D2/§C.1). DEFAULT features only:
# accelerate/mkl/cuda/metal stay OFF for a reproducible CPU build (§C.1).
candle-core = "0.10.2"
candle-nn = "0.10.2"
candle-transformers = "0.10.2"
chrono = { version = "0.4.42", features = ["serde"] }
directories = "6.0.0"
futures-core = "0.3.32"
# Stable 0.x hf-hub for consent-gated, SHA-256-verified model download (§C.5); NOT the 1.0.0-rc.
# Sync `ureq` transport only (ureq v3 bundles rustls) — no native-tls/OpenSSL, no tokio/reqwest pull.
hf-hub = { version = "0.5.0", default-features = false, features = ["ureq"] }
getrandom = "0.3.4"
hex = "0.4.3"
icu_normalizer = { version = "2.2.0", default-features = false, features = ["compiled_data"] }
keyring-core = "0.7.2"
libc = "0.2.177"
plist = "1.8.0"
regex = "1.12.2"
rig-core = "0.34.0"
rmcp = { version = "1.3.0", features = ["transport-io"] }
rusqlite = { version = "0.39.0", features = ["backup", "bundled-sqlcipher-vendored-openssl", "serde_json"] }
# Same major as rig-core's `schemars` (1.x) so `LlmProvider`'s structured-output schema
# unifies with rig's `output_schema` type rather than introducing a second instance.
schemars = "1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = "3.23.0"
# HF tokenizer (Apache-2.0). We request ONLY the pure-Rust `fancy-regex` backend (PathKeep's own
# code never asks for the C `onig` backend) AND pin the version to 0.22 so it UNIFIES with the
# `tokenizers` candle-core 0.10.2 pulls transitively — that alignment removed the previous duplicate
# (0.21 + 0.22) so only ONE copy of tokenizers compiles. NOTE: candle-core 0.10.2 hardcodes
# `tokenizers { features = ["onig"] }` in its OWN manifest, so Cargo feature-unification still
# enables `onig` (→ onig_sys, a C/Oniguruma build) on the single shared tokenizers. Fully dropping
# `onig` would require a `[patch]`/fork of candle-core (off-limits without an ADR); requesting
# fancy-regex here is the most we can do from PathKeep's manifest, and it keeps OUR contribution
# pure-Rust + the graph single-version. See the W-AI-4b closeout for the candle-core onig caveat.
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
walkdir = "2.5.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dependencies]
anyhow.workspace = true
axum = { version = "0.8.6", optional = true }
chrono.workspace = true
log = "0.4.28"
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2.8.5", features = [] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.4.3"
tauri-plugin-log = "2.8.0"
tauri-plugin-stronghold = "2.3.1"
tauri-plugin-updater = "2.10.1"
tokio.workspace = true
tower-http = { version = "0.6.6", optional = true, features = ["cors"] }
url = "2.5.7"
vault-core = { version = "0.1.0", path = "crates/vault-core" }
vault-platform = { version = "0.1.0", path = "crates/vault-platform" }
vault-worker = { version = "0.1.0", path = "crates/vault-worker" }

[dev-dependencies]
rusqlite.workspace = true
tauri = { version = "2.8.5", features = ["test"] }
tempfile.workspace = true

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
