[package]
name = "browser-history-parser"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
chrono.workspace = true
hex.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true
