[package]
name = "vault-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
browser-history-parser = { version = "0.1.0", path = "../browser-history-parser" }
# candle in-app embedding engine (W-AI-4b): CPU-only, default features (no accelerate/mkl/cuda/metal).
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
chrono.workspace = true
directories.workspace = true
futures-core.workspace = true
getrandom.workspace = true
hex.workspace = true
# Consent-gated, SHA-256-verified, off-thread model download into models_dir (W-AI-4b §C.5).
hf-hub.workspace = true
iana-time-zone = "0.1.64"
icu_normalizer.workspace = true
libc.workspace = true
plist.workspace = true
publicsuffix = "2.3.0"
regex.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls"] }
rig-core.workspace = true
rusqlite.workspace = true
schemars.workspace = true
scraper = "0.24.0"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
# HF tokenizer for the candle Qwen3 forward pass (W-AI-4b); loads tokenizer.json from disk.
# We request the pure-Rust `fancy-regex` backend; candle-core still forces `onig` transitively —
# see the workspace dep comment for the full caveat.
tokenizers.workspace = true
tokio.workspace = true
walkdir.workspace = true
zip.workspace = true

[dev-dependencies]
browser-history-fixtures = { version = "0.1.0", path = "../browser-history-fixtures" }
# Already regular deps of the crate; restated here only so the env-gated LM Studio e2e
# integration test (compiled as a separate crate) can drive the real async stream.
futures-core.workspace = true
mockito = "1.7.0"
tokio.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
