[package]
name = "vault-core"
version = "0.1.0"
edition = "2024"
license.workspace = true

# --- Cargo features (W-AI-9 Sub-block D) ---------------------------------------------------------
# DEFAULT is CPU-only: no candle accelerator feature is enabled, so the default build COMPILES zero
# of the metal crates (`cargo tree -e features` on default features shows no `candle-metal-kernels`).
# CI / `bun run verify` build default features only.
#
# REPRODUCIBILITY NOTE (judgment call, flagged in the W-AI-9-D closeout): merely DEFINING the `metal`
# feature records its reachable crates (`candle-metal-kernels`, `objc2-metal`, `gemm 0.19`, …) in
# `Cargo.lock`, because Cargo's lock captures the union of all feature-reachable deps — exactly like
# the off-by-default `devtools-bridge` feature already records `axum`/`tower-http` in this repo's
# lock. The default build still resolves+compiles NONE of them; only the lock GAINS the optional
# (unbuilt) graph. A literally byte-unchanged lock is unachievable for any real cargo feature that
# gates extra crates, so the reproducibility contract is met in substance (zero new compiled crates
# in default/CI), not in lock bytes.
[features]
default = []
# `metal` — opt-in Apple-Silicon Metal backend across the three candle crates (05 §7). OFF in
# default/coverage/CI: Metal cannot run on the CI box (no GPU), and the metal crates only enter the
# build graph under `--features metal`. The runtime `gpu_enabled` flag, the honest "needs a Metal
# build" UX, the re-embed trigger, and the cost estimator all live in the DEFAULT build and are fully
# covered; only the `Device::new_metal(0)` call site is compiled out (see `ai/embedding_candle.rs`
# `select_device`). A future Metal CI lane that builds `--features metal` MUST re-run
# `cargo deny check`, since the metal crates only enter the dependency graph there.
#
# TARGET-GATED (fix for the Linux `--all-features` clippy break): candle's `metal` feature pulls
# `candle-metal-kernels → objc2-metal → objc2`, and `objc2` is `compile_error!`-guarded to Apple
# platforms, so `--all-features` on the CI Linux runner used to fail to compile. Activating candle's
# Metal backend is therefore routed through the macOS-only `vault-metal-backend` shim dep (see
# `[target.'cfg(target_os = "macos")'.dependencies]`), NOT through `candle-core/metal` directly: on a
# non-Apple target the shim doesn't exist, so enabling this feature (via `--all-features` /
# `--features metal`) is INERT for candle and never reaches objc2. The feature itself still gates
# vault-core's own Metal code (`cfg(feature = "metal")` in `ai/embedding_candle.rs` etc.), which
# compiles fine without candle's backend because candle exposes a `dummy_metal_backend`
# (`Device::new_metal` resolves in both builds). Metal stays opt-in even on macOS — the shim is
# `optional`, so the default (CPU) build compiles none of it.
metal = ["dep:vault-metal-backend"]

[dependencies]
anyhow.workspace = true
browser-history-parser = { version = "0.1.0", path = "../browser-history-parser" }
# candle in-app embedding engine (W-AI-4b): CPU-only by DEFAULT (no accelerate/mkl/cuda/metal). The
# Apple-Silicon Metal backend is the opt-in `metal` feature above — still OFF in default/CI builds.
candle-core.workspace = true
candle-nn.workspace = true
candle-transformers.workspace = true
chrono.workspace = true
directories.workspace = true
futures-core.workspace = true
getrandom.workspace = true
hex.workspace = true
# Consent-gated, SHA-256-verified, off-thread model download into models_dir (W-AI-4b §C.5).
hf-hub.workspace = true
iana-time-zone = "0.1.64"
icu_normalizer.workspace = true
libc.workspace = true
plist.workspace = true
publicsuffix = "2.3.0"
regex.workspace = true
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "charset", "http2", "rustls-tls"] }
rig-core.workspace = true
rusqlite.workspace = true
schemars.workspace = true
scraper = "0.24.0"
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
# HF tokenizer for the candle Qwen3 forward pass (W-AI-4b); loads tokenizer.json from disk.
# We request the pure-Rust `fancy-regex` backend; candle-core still forces `onig` transitively —
# see the workspace dep comment for the full caveat.
tokenizers.workspace = true
tokio.workspace = true
# Direct (not just transitive-via-hf-hub) so `open_download_stream` can GET the HF resolve URL with
# byte progress (W-AI-4b streaming download); ureq v3 bundles rustls, no new crate in the graph.
ureq.workspace = true
walkdir.workspace = true
# code-mode sandbox runtime (W-AI-8); pure-Rust Cranelift + a minimal scoped WASI (stdin/stdout-only
# RPC channel, no fs/net/env/real-clock) so the Javy QuickJS→WASM guest can run real JS.
wasmtime.workspace = true
wasmtime-wasi.workspace = true
bytes.workspace = true
zip.workspace = true

# macOS-only, opt-in Metal-backend shim. `vault-metal-backend` is a leaf crate whose ONLY job is to
# re-declare the candle trio with candle's `metal` feature; attaching it here as a target-gated
# `optional` dep unifies that feature onto vault-core's own (all-target) candle deps on Apple targets
# WITHOUT aliasing candle-core inside this crate (which would be a "same package, two names" error).
# On Linux/Windows the shim doesn't exist, so `--features metal` / `--all-features` never reaches it —
# and candle's Metal path (candle-metal-kernels → objc2-metal → objc2, `compile_error!` off Apple) is
# absent from every non-Apple build graph. `optional` keeps it out of the default (CPU) build.
[target.'cfg(target_os = "macos")'.dependencies]
vault-metal-backend = { version = "0.1.0", path = "../vault-metal-backend", optional = true }

[dev-dependencies]
browser-history-fixtures = { version = "0.1.0", path = "../browser-history-fixtures" }
# Already regular deps of the crate; restated here only so the env-gated LM Studio e2e
# integration tests (compiled as separate crates) can drive the real async stream, seed an isolated
# project root, and read the durable agent trace back.
futures-core.workspace = true
mockito = "1.7.0"
tempfile.workspace = true
tokio.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
