[package]
name = "vault-platform"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
keyring.workspace = true
keyring-core.workspace = true
plist.workspace = true
serde.workspace = true
serde_json.workspace = true
vault-core = { version = "0.1.0", path = "../vault-core" }

[dev-dependencies]
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
