[package]
name = "vault-worker"
version = "0.1.0"
edition = "2024"
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vault-core = { version = "0.1.0", path = "../vault-core" }
vault-platform = { version = "0.1.0", path = "../vault-platform" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
