[package]
name = "vault-worker"
version = "0.1.0"
edition = "2024"
license.workspace = true

[features]
# Passthrough for vault-core's opt-in Apple-Silicon Metal embedding backend (W-AI-9 Sub-block D).
# Opt-in feature, still OFF in default/CI; only `--features metal` propagates it into vault-core (and
# from there into candle). The worker holds no metal code of its own — it just forwards the feature.
metal = ["vault-core/metal"]

[dependencies]
anyhow.workspace = true
chrono.workspace = true
log = "0.4.28"
rmcp.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
vault-core = { version = "0.1.0", path = "../vault-core" }
vault-platform = { version = "0.1.0", path = "../vault-platform" }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
